force-app/main/default/objects/Request__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <label>AssignedTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>