force-app/main/default/objects/Request__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>Closed Date</description>
    <label>ClosedDate</label>
    <type>DateTime</type>
</CustomField>