force-app/main/default/objects/Request__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Date when request is created.</description>
    <label>CreatedDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>