force-app/main/default/objects/Request__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MemberId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>