force-app/main/default/objects/Request__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>RequestType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amenity and Reservation Requests</fullName>
                <default>true</default>
                <label>Amenity and Reservation Requests</label>
            </value>
            <value>
                <fullName>Billing Question</fullName>
            </value>
            <value>
                <fullName>Fee Waiver Request</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>